@@ -34,7 +34,8 @@ gtkdialog_SOURCES = \
 		    widget_statusbar.c widget_statusbar.h \
 		    widget_text.c widget_text.h \
 		    widget_timer.c widget_timer.h \
-		    widget_tree.c widget_tree.h
+		    widget_tree.c widget_tree.h \
+		    widget_window.c widget_window.h
 
 AM_CFLAGS = $(GTK_CFLAGS) \
 	    $(GTHREAD_CFLAGS) \
